# libem

./: .gitignore  CMakeLists.txt  test.jl
app/: CMakeLists.txt
app/src/: main.c
cmake/: FindGMP.cmake
include/em/: em.h
include/matrix/: matrix.h
lib/: CMakeLists.txt
lib/src/: em.c
src/app/: CMakeLists.txt
src/app/src/: main.c
src/em/: CMakeLists.txt
src/em/src/: em.c
src/em/test/: em.c
src/matrix/: CMakeLists.txt
src/matrix/src/: matrix.c
src/matrix/test/: matrix.c
